--- a/orders/templates/orders/clients.html
+++ b/orders/templates/orders/clients.html
@@ -58,30 +58,31 @@
         <table>
             <thead>
                 <tr>
-                    <th>Телефон</th>
-                    <th>ФИО</th>
-                    <th>Email</th>
-                    <th>Кол-во заказов</th>
-                    <th>Последний заказ</th>
-                    <th>Действия</th>
+                    <th class="phone-col">Телефон</th>
+                    <th class="name-col">ФИО</th>
+                    <th class="email-col">Email</th>
+                    <th class="order-count-col">Кол-во заказов</th>
+                    <th class="last-order-col">Последний заказ</th>
+                    <th class="debt-col">Задолженность</th>
+                    <th class="actions-col">Действия</th>
                 </tr>
             </thead>
             <tbody>
                 {% for client in clients %}
                 <tr data-client-id="{{ client.id }}">
-                    <td>
+                    <td class="phone-col">
                         <a href="{% url 'orders:client_detail' client.id %}" class="client-link">
                             {{ client.phone }}
                         </a>
                     </td>
-                    <td>
+                    <td class="name-col">
                         <a href="{% url 'orders:client_detail' client.id %}" class="client-link">
                             {{ client.full_name|default:"-" }}
                         </a>
                     </td>
-                    <td>{{ client.email|default:"-" }}</td>
-                    <td>{{ client.order_set.count }}</td>
-                    <td>
+                    <td class="email-col">{{ client.email|default:"-" }}</td>
+                    <td class="order-count-col">{{ client.order_set.count }}</td>
+                    <td class="last-order-col">
                         {% with last_order=client.order_set.first %}
                         {% if last_order %}
                             {{ last_order.start_date|date:"d.m.Y" }}
@@ -90,7 +91,16 @@
                         {% endif %}
                         {% endwith %}
                     </td>
-                    <td>
+                    <td class="debt-col">
+                        {% with total_debt=client.get_total_debt %}
+                            {% if total_debt %}
+                                <span class="debt">{{ total_debt }} ₽</span>
+                            {% else %}
+                                <span class="no-debt">0 ₽</span>
+                            {% endif %}
+                        {% endwith %}
+                    </td>
+                    <td class="actions-col">
                         <div class="action-buttons">
                             <a href="{% url 'orders:client_detail' client.id %}" class="button">детали</a>
                             <a href="{% url 'orders:create_order' %}?client={{ client.id }}" class="button">новый заказ</a>
@@ -100,7 +110,7 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="6">Нет клиентов</td>
+                    <td colspan="7">Нет клиентов</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -313,6 +323,88 @@ th {
     .create-client {
         margin-top: 0;
         margin-left: 15px;
+    }
+}
+
+/* Стили для таблицы клиентов */
+.debt {
+    font-weight: normal;
+}
+
+.no-debt {
+    color: inherit;
+}
+
+/* Настраиваем ширину столбцов */
+.phone-col {
+    width: 14%;
+}
+
+.name-col {
+    width: 20%;
+}
+
+.email-col {
+    width: 15%;
+}
+
+.order-count-col {
+    width: 10%;
+    white-space: nowrap;
+    text-align: center;
+}
+
+.last-order-col {
+    width: 12%;
+}
+
+.debt-col {
+    width: 12%;
+}
+
+.actions-col {
+    width: 17%;
+}
+
+/* Медиа-запросы для адаптивности */
+@media (max-width: 1200px) {
+    .phone-col, .name-col, .email-col, .last-order-col, .debt-col {
+        width: auto;
+    }
+    
+    .order-count-col {
+        width: 8%;
+        white-space: nowrap;
+    }
+    
+    .actions-col {
+        width: auto;
+    }
+    
+    th, td {
+        padding: 8px 6px;
+    }
+}
+
+@media (max-width: 768px) {
+    table {
+        display: block;
+        overflow-x: auto;
+    }
+    
+    th, td {
+        padding: 6px 4px;
+        font-size: 13px;
+    }
+    
+    .button {
+        padding: 3px 6px;
+        font-size: 12px;
+    }
+    
+    .order-count-col {
+        white-space: normal;
+        text-align: center;
     }
 }
 </style>
