--- a/orders/templates/orders/clients.html
+++ b/orders/templates/orders/clients.html
@@ -356,10 +356,12 @@ th {
 
 .last-order-col {
     width: 12%;
+    text-align: center;
 }
 
 .debt-col {
     width: 12%;
+    text-align: center;
 }
 
 .actions-col {
